[gd_scene load_steps=29 format=2]

[ext_resource path="res://sprites/enemy1.png" type="Texture" id=1]
[ext_resource path="res://scripts/entity/Enemy1.gd" type="Script" id=2]
[ext_resource path="res://other/color_swap.tres" type="Material" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 2, 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "down_idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 11, 10, 11 ]
}

[sub_resource type="Animation" id=9]
resource_name = "left_idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=7]
resource_name = "right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 5, 3 ]
}

[sub_resource type="Animation" id=10]
resource_name = "right_idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 8, 6 ]
}

[sub_resource type="Animation" id=11]
resource_name = "up_idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "down_idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "up_idle"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "left_idle"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "right_idle"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 12 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 13 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 14 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 15 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "down"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "up"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "left"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "right"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 17 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 19 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 20 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachine" id=24]
states/idle/node = SubResource( 16 )
states/idle/position = Vector2( 205, 100 )
states/walk/node = SubResource( 21 )
states/walk/position = Vector2( 476, 100 )
transitions = [ "idle", "walk", SubResource( 22 ), "walk", "idle", SubResource( 23 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=25]

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 276
script = ExtResource( 2 )

[node name="Enemy1" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = ExtResource( 1 )
hframes = 6
vframes = 4
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
width = 1.0

[node name="LineOFSight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 276

[node name="Raycasts" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32
monitorable = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="shoot_timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/down = SubResource( 5 )
anims/down_idle = SubResource( 8 )
anims/left = SubResource( 6 )
anims/left_idle = SubResource( 9 )
anims/right = SubResource( 7 )
anims/right_idle = SubResource( 10 )
anims/up = SubResource( 4 )
anims/up_idle = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 24 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 25 )
parameters/idle/blend_position = Vector2( 0, 0 )
parameters/walk/blend_position = Vector2( 0, 0 )

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
